feat: Add exception handling